# dova-core

./: .gitignore  Makefile.am  autogen.sh  configure.ac  dova-core-0.1.pc.in
os/: Makefile.am  dova-atomic-gcc.h  dova-atomic-msc.h  dova-dlfcn-win32.h  dova-io-linux.h  dova-io-win32.h  dova-os.c  dova-os.h  dova-os.vapi  dova-threads-pthread.h  dova-threads-win32.h  dova-time-win32.h  dova-ucontext-posix.h  dova-ucontext-win32.h  dova-ucontext-x86.h  dova-ucontext-x86_64.h  posix.vapi
src/: .gitignore  Makefile.am  app.vala  array.vala  arraylist.vala  atomic-gcc.vala  bool.vala  byte.vala  char.vala  char_case_props_data.vala  char_props_data.vala  date.vala  datetime.vala  dayofweek.vala  decimal.vala  delegate.vala  double.vala  dova-core-0.1.deps  duration.vala  dynamiccollection.vala  dynamiclist.vala  dynamicmap.vala  dynamicobject.vala  error.vala  eventcontext.vala  file-posix.vala  file.vala  float.vala  hashmap.vala  hashset.vala  int.vala  integer.vala  iterable.vala  iterator.vala  list.vala  long.vala  map.vala  model.vala  module.vala  net.vala  (+24 more)
tests/: Makefile.am  base.vala  list.vala  string.vala
types/: Makefile.am  dova-features.h  dova-types.h
vapi/: Makefile.am  gcc.vapi  linux.vapi  posix.vapi
