NULL =

AM_CPPFLAGS = \
	-I$(top_srcdir)/types \
	$(NULL)

noinst_LTLIBRARIES = \
	libdova-os.la \
	$(NULL)

libdova_os_la_SOURCES = \
	dova-atomic-gcc.h \
	dova-atomic-msc.h \
	dova-dlfcn-win32.h \
	dova-io-linux.h \
	dova-io-win32.h \
	dova-os.c \
	dova-os.h \
	dova-threads-pthread.h \
	dova-threads-win32.h \
	dova-time-win32.h \
	dova-ucontext-posix.h \
	dova-ucontext-win32.h \
	dova-ucontext-x86.h \
	dova-ucontext-x86_64.h \
	$(NULL)
